1.6.2.0/_sources/Reference/NodeReference/GafferScene/CustomAttributes.md.txt
CustomAttributes
================

Applies arbitrary user-defined attributes to locations in the scene. Note
that for most common cases the StandardAttributes or renderer-specific
attributes nodes should be preferred, as they provide predefined sets of
attributes with customised user interfaces. The CustomAttributes node is
of most use when needing to set an attribute not supported by the
specialised nodes.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The processed output scene.

enabled
-------

The on/off state of the node. When it is off, the node outputs the input scene unchanged.

in
--

The input scene

filter
------

The filter used to control which parts of the scene are
processed. A Filter node should be connected here.

attributes
----------

The attributes to be applied - arbitrary numbers of user defined
attributes may be added as children of this plug via the user
interface, or using the CompoundDataPlug API via python.

global
------

Causes the attributes to be applied to the scene globals
instead of the individual locations defined by the filter.

extraAttributes
---------------

An additional set of attributes to be added. Arbitrary numbers
of attributes may be specified within a single `IECore.CompoundObject`,
where each key/value pair in the object defines an attribute.
This is convenient when using an expression to define the attributes
and the attribute count might be dynamic. It can also be used to
create attributes whose type cannot be handled by the `attributes`
CompoundDataPlug, with `IECoreScene.ShaderNetwork` being one example.

If the same attribute is defined by both the attributes and the
extraAttributes plugs, then the value from the extraAttributes
is taken.